--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "flowbite-react": "^0.10.1",
     "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "scgservices": "file:"
   },
   "devDependencies": {
     "@types/node": "^20",
